feat: add baseline typography

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,60 @@
 
 <body>
 
+	<div class="r">
+		<div class="g-12">
+			<h1>Lorem ipsum dolor sit amet</h1>
+		</div>
+	</div>
+
+	<div class="r">
+		<div class="g-1"><h1>Xx</h1></div>
+		<div class="g-5">
+			<h2>Consectetur adipiscing elit. Cras eu dolor at.</h2>
+		</div>
+		<div class="g-6">
+			<h3>Nullam at nisi at lectus hendrerit efficitur vitae semper. Mauris sit amet viverra turpis. Pellentesque fringilla facilisis maximus.</h3>
+		</div>
+	</div>
+
+	<div class="r">
+		<div class="g-4">
+			<h4>Mauris sit amet viverra turpis. Pellentesque fringilla facilisis maximus. Volutpat vitae commodo.</h4>
+		</div>
+		<div class="g-6">
+			<h5>Vestibulum laoreet, mi ac ullamcorper commodo, enim sem vestibulum mi, sit amet consectetur lectus lacus eget libero. Sed arcu quam, vestibulum sit amet elit eget, posuere ornare tellus. Donec vestibulum, sem ac luctus elementum, arcu lectus.</h5>
+		</div>
+	</div>
+
+	<div class="r">
+		<div class="g-1"></div>
+		<div class="g-5">
+			<h6>Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi ut lacus ac tortor sagittis rhoncus tristique et velit. Aliquam erat volutpat. Fusce nunc urna, sodales eget lacinia eleifend, mattis nec lectus. Etiam in fermentum nisl. Quisque porttitor euismod sem, et aliquet diam luctus eleifend. Cras bibendum nisl elit, molestie vulputate ante mollis vel.</h6>
+		</div>
+		<div class="g-1"></div>
+		<div class="g-5">
+			<p>Quisque porttitor euismod sem, et aliquet diam luctus eleifend. Cras bibendum nisl elit, molestie vulputate ante mollis vel. Etiam in fermentum nisl. Quisque porttitor euismod sem, et aliquet diam luctus eleifend. Cras bibendum nisl elit, molestie vulputate ante mollis vel. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi ut lacus ac tortor sagittis rhoncus tristique et velit.</p>
+		</div>
+	</div>
+
+	<div class="r">
+		<div class="g-1"><h1>Aa</h1></div>
+		<div class="g-1"><h2>Bb</h2></div>
+		<div class="g-1"><h3>Cc</h3></div>
+		<div class="g-1"><h4>Dd</h4></div>
+		<div class="g-1"><h5>Ee</h5></div>
+		<div class="g-1"><h6>Ff</h6></div>
+		<div class="g-1"><p>Gg</p></div>
+	</div>
+
 	<script type="text/javascript" src="/assets/js/main.js"></script>
+
+	<script src="http://files.keyes.ie/things/baseliner/baseliner-latest.min.js"></script>
+	<script>
+		window.onload = function() {
+			baseliner = new Baseliner(24);
+		}
+	</script>
 
 </body>
 </html>
